--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -62,6 +62,6 @@ input:-webkit-autofill,
   background-color: #fff;
   border: 1px solid #e7ebf1;
   border-top: none;
-  // border-bottom-left-radius: 5px;
-  // border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
 }
