--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -54,6 +54,7 @@ input:-webkit-autofill,
   background-color: #fff;
   border: 1px solid #e7ebf1;
   border-bottom: none;
+  outline: none;
   // border-radius: 5px;
   // border-bottom-right-radius: 0;
   // border-bottom-left-radius: 0;
